# libsodium-simple

./: CMakeLists.txt  simple.cpp
